--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,24 @@
 baseURL = "https://folderplus.github.io/"
 languageCode = "en-us"
 title = "folderplus"
+tags = ["blog"]
+theme = "casper"
+paginate = 5
+
+
+[[menu.main]]
+name = "Medium"
+url = "https://medium.com/@folderplus"
+weight = -120
+
+[[menu.main]]
+name = "Github repos"
+pre = "<h3>Follow me</h3>"
+url = "https://github.com/FOLDERPLUs"
+weight = 100
+
+[params]
+cover = "images/empty-white-room.jpg"
+
+githubName = "FOLDERPLUs"
+twitterName = "folder_plu_s"
